--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -7,19 +7,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>DaleQueSosVos</title>
+     <!-- Keywords -->
+     <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y más.">
+     <!-- Description -->
+     <meta name="description" content="Todo en zapatillas , unisex , todos los talles, Urbanas">
+
+    <title>DaleQueSosVos | CALZADO</title>
 </head>
 <body>
     <!-- NavBar -->
 
    <header class="header">
 
-    <nav class="navbar navbar-expand-lg bg-light navBar">
+    <nav class="navbar navbar-expand-lg bg-light header__nav">
 
         <div class="container-fluid">
 
             <a href="../index.html">
-                <img src="../img/DQSV.png" alt="Logo DaleQueSosVos">
+                <img class="header__logo" src="../img/DQSV.png" alt="Logo DaleQueSosVos">
             </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,26 +33,26 @@
 
           <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbarSupportedContent">
 
-            <ul class="navbar-nav list">
+            <ul class="navbar-nav header__ul">
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                <a class="header__link active" aria-current="page" href="../index.html">INICIO</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./coleccion.html">COLECCION</a>
+                <a class="header__link active" aria-current="page" href="./coleccion.html">COLECCION</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./accesorios.html">ACCESORIOS</a>
+                <a class="header__link active" aria-current="page" href="./accesorios.html">ACCESORIOS</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./calzado.html">CALZADO</a>
+                <a class="header__link header__link--active active" aria-current="page" href="./calzado.html">CALZADO</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
+                <a class="header__link active" aria-current="page" href="./contacto.html">CONTACTO</a>
               </li>
 
             </ul>
