--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,19 +7,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>DaleQueSosVos</title>
+     <!-- Keywords -->
+     <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y más.">
+     <!-- Description -->
+     <meta name="description" content="Registrate y recibí todas las novedades y promociones disponibles">
+
+    <title>DaleQueSosVos | CONTACTO</title>
 </head>
 <body>
     <!-- NavBar -->
 
    <header class="header">
 
-    <nav class="navbar navbar-expand-lg bg-light navBar">
+    <nav class="navbar navbar-expand-lg bg-light header__nav">
 
         <div class="container-fluid">
 
             <a href="../index.html">
-                <img src="../img/DQSV.png" alt="Logo DaleQueSosVos">
+                <img class="header__logo" src="../img/DQSV.png" alt="Logo DaleQueSosVos">
             </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,26 +33,26 @@
 
           <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbarSupportedContent">
 
-            <ul class="navbar-nav list">
+            <ul class="navbar-nav header__ul">
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                <a class="header__link active" aria-current="page" href="../index.html">INICIO</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./coleccion.html">COLECCION</a>
+                <a class="header__link active" aria-current="page" href="./coleccion.html">COLECCION</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./accesorios.html">ACCESORIOS</a>
+                <a class="header__link active" aria-current="page" href="./accesorios.html">ACCESORIOS</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./calzado.html">CALZADO</a>
+                <a class="header__link active" aria-current="page" href="./calzado.html">CALZADO</a>
               </li>
 
               <li class="nav-item itemList">
-                <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
+                <a class="header__link header__link--active active" aria-current="page" href="./contacto.html">CONTACTO</a>
               </li>
 
             </ul>
@@ -69,18 +74,33 @@
         
         <h1 class="wow contacto animate__animated animate__zoomIn">CONTACTO</h1>
 
-        <form class="contContacto" action="#">
-            <input type="text" placeholder="Nombe y apellido" name="Nombre">
-            <br><br>
-            <label for="edad">Edad</label>
-            <br>
-            <input type="date" name="edad">
-            <br><br>
-            <textarea name="comentario" cols="25" rows="5"></textarea>
-            <br><br>
-            <input type="submit">
+        <form>
+
+          <div class="contContacto">
+            <label for="exampleInputEmail1">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresá tu email">
+            <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu correo electrónico con nadie.</small>
+          </div>
+
+          <div class="contContacto">
+            <label for="exampleInputPassword1">Contraseña</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingresá una contraseña">
+          </div>
+
+          <div class="contContacto">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Acepto los términos</label>
+          </div>
+
+          <div class="contContacto">
+            <textarea name="comentario" id="" cols="25" rows="5"></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Enviar</button>
 
         </form>
+
+
     </main>
     
     <footer class="footer">
