--- a/index.html
+++ b/index.html
@@ -236,25 +236,33 @@
       <h2 class=" wow combosOfertas animate__animated animate__zoomIn"> ¡ Armá tu combo y ahorrá !</h2>
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
         <div class="carousel-inner">
+
           <div class="carousel-item active">
-            <img src="../img/BannerCombo2.png" class="d-block w-100" alt="Banner con fotos y promociones">
+            <img src="./img/BannerCombo2.png" class="d-block w-100" alt="Banner con fotos y promociones">
           </div>
+
           <div class="carousel-item">
-            <img src="../img/BannerCombos.png" class="d-block w-100" alt="Banner sale 30% off">
+            <img src="./img/BannerCombos.png" class="d-block w-100" alt="Banner sale 30% off">
           </div>
+
           <div class="carousel-item">
-            <img src="../img/BannerCombo3.png" class="d-block w-100" alt="Banner Cuotas sin interés">
+            <img src="./img/BannerCombo3.png" class="d-block w-100" alt="Banner Cuotas sin interés">
           </div>
+
         </div>
+
         <button class=" carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
           <span class="boton-dos carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="boton-dos visually-hidden">Previous</span>
         </button>
+
         <button class=" carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
           <span class="boton-dos carousel-control-next-icon" aria-hidden="true"></span>
           <span class="boton-dos visually-hidden">Next</span>
         </button>
+
       </div>
 
        <!-- Secciones -->
