Agregamos cambios al proyecto

--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active">
-            <img src="./img/BannerCombo2.png" class="d-block w-100" alt="Banner con fotos y promociones">
+            <img src="./img/BannerCombo2.png" class="d-block w-100" alt="Banner con fotos y combos">
           </div>
 
           <div class="carousel-item">
-            <img src="./img/BannerCombos.png" class="d-block w-100" alt="Banner sale 30% off">
+            <img src="./img/BannerCombos.png" class="d-block w-100" alt="Banner con fotos y combos">
           </div>
 
           <div class="carousel-item">
-            <img src="./img/BannerCombo3.png" class="d-block w-100" alt="Banner Cuotas sin interés">
+            <img src="./img/BannerCombo3.png" class="d-block w-100" alt="Banner con fotos y combos">
           </div>
 
         </div>
