--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
 
         <!-- banner -->
 
-        <img class="bannerContacto" src="../img/BannerContacto.jpg" alt="Banner Contacto">
+        <img class="bannerContacto" src="../img/BannerContacto.png" alt="Banner Contacto">
         
         <h1 class="wow contacto animate__animated animate__zoomIn">CONTACTO</h1>
 
