--- a/index.html
+++ b/index.html
@@ -376,13 +376,13 @@
                 <h2>Conocenos</h2>
     
                 <a class="redes" href="https://www.instagram.com/daleqsosvos/" target="_blank">
-                    <img src="../img/instagram.png" alt="instagram">
+                    <img src="./img/instagram.png" alt="instagram">
                 </a>
                 <a class="redes" href="https://www.facebook.com/daleqsosvos/" target="_blank">
-                    <img src="../img/facebook.png" alt="facebook">
+                    <img src="./img/facebook.png" alt="facebook">
                 </a>
                 <a class="redes" href="#">
-                    <img src="../img/whatsapp.png" alt="whatsapp" target="_blank">
+                    <img src="./img/whatsapp.png" alt="whatsapp" target="_blank">
                 </a>
     
                </div>
