agregamos cambios en el proyecto

--- a/index.html
+++ b/index.html
@@ -341,28 +341,37 @@
          <!-- Carousel -->
     
          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+
           <div class="carousel-inner">
+
             <div class="carousel-item active" data-bs-interval="10000">
-              <img src="./img/BannerCuotas.png" class="d-block w-100" alt="...">
+              <img src="./img/BannerCuotas.png" class="d-block w-100" alt="Banner con fotos y promociones">
             </div>
+
             <div class="carousel-item active" data-bs-interval="10000">
-              <img src="./img/BannerCuotasDos.png" class="d-block w-100" alt="...">
+              <img src="./img/BannerCuotasDos.png" class="d-block w-100" alt="Banner sale 30% off">
             </div>
+
             <div class="carousel-item" data-bs-interval="2000">
-              <img src="./img/BannerCuotasTres.png" class="d-block w-100" alt="...">
+              <img src="./img/BannerCuotasTres.png" class="d-block w-100" alt="Banner Cuotas sin interés">
             </div>
+
             <div class="carousel-item">
-              <img src="./img/BannerCuotasCuatro.png" class="d-block w-100" alt="...">
+              <img src="./img/BannerCuotasCuatro.png" class="d-block w-100" alt="Banner Cuotas sin interés">
             </div>
+
           </div>
+
           <button class="boton-dos carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
             <span class="boton-dos carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="boton-dos visually-hidden">Previous</span>
           </button>
+
           <button class="boton-dos carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
             <span class="boton-dos carousel-control-next-icon" aria-hidden="true"></span>
             <span class="boton-dos visually-hidden">Next</span>
           </button>
+
         </div>
     
         </main>
