--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <!-- Keywords -->
-    <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y más.">
+    <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y mas.">
     <!-- Description -->
-    <meta name="description" content="Tenemos las mejores gorras y ruanas para combinar, aprovechá las ofertas.">
+    <meta name="description" content="Tenemos las mejores gorras y ruanas para combinar, aprovecha las ofertas.">
 
     <title>DaleQueSosVos | ACCESORIOS</title>
 </head>
