--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
      <!-- Keywords -->
-     <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y más.">
+     <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y mas.">
      <!-- Description -->
-     <meta name="description" content="Descubrí un anticipo de la nueva colección. Disponible en Locales & Shop Online. ¡Comprá Online en DaleQueSosVos y Aprovechá Descuentos y Beneficios excusivos!">
+     <meta name="description" content="Descubri un anticipo de la nueva coleccion. Disponible en Locales & Shop Online. ¡Comprá Online en DaleQueSosVos y Aprovecha Descuentos y Beneficios excusivos!">
 
     <title>DaleQueSosVos | COLECCION</title>
 </head>
