--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
      <!-- Keywords -->
-     <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y más.">
+     <meta name="keywords" content="Calzados, remeras, buzos, camperas, camisas, pantalones, bermudas y mas.">
      <!-- Description -->
-     <meta name="description" content="Registrate y recibí todas las novedades y promociones disponibles">
+     <meta name="description" content="Registrate y recibi todas las novedades y promociones disponibles">
 
     <title>DaleQueSosVos | CONTACTO</title>
 </head>
